tests/paczka1/fuzzy1/37689585.err
Error in line 1: A69 A69 69,3
Error in line 2: A69 S11 13,5
Error in line 5: A69 A479 9,8
Error in line 3: XuBZ1Jj S11 28,9
Error in line 9: XuBZ1Jj S196 72,9
Error in line 15: A69 A69 42,8
Error in line 29: 92cS19630,3
Error in line 21: 8pEJVRjw4 A69 244,4
Error in line 33: XuBZ1Jj A479 19,6
